JG-2001-11-30-1: Enhancem.: Event client mechanism:
                            - any user may start an event client from an admin
                              or submit host
                            - changing event client parameters (subscription or
                              event delivery interval) does not take immediate
                              effect, but a number of changes can be made 
                              effective by a single qmaster communication.

JG-2001-11-30-0: Cleanup:   made a number of function parameters const

CR-2001-11-30-1: Bugfix:    qrsh error with empty job parameters
                 Issue:     #110
                 Bugtraq:   #4533448

AA-2001-11-30-4: Feature:   Security changes:
                            CSP seclib changes

CR-2001-11-30-0: Bugfix:    qsub parsing does not handle blanks on job args correctly
                 Issue:     #93
                            Only fixed qmaster output text ("your job X (...) has 
                            been submitted."), problem of lost blanks does not 
                            appear any more. Maybe someone else fixed it in an
                            other check in.

AA-2001-11-30-3: Feature:   Security changes:
                            - Makefiles, aimk, aimk.site
                              additions for CSP and Kerberos security 

AA-2001-11-30-2: Feature:   Security changes:
                            - Kerberos Makefiles, make it compilable with
                              const change

AA-2001-11-30-1: Feature:   Security changes:
                            - qtcsh Makefiles removed EXTRALIBS in gethost
                              buildrule for compilation in sec modes

AA-2001-11-30-0: Feature:   Security changes:
                            - introduced new product modes 
                              sge-csp and sgeee-csp belonging to feature
                              FEATURE_CSP_SECURITY