@@ -40,7 +40,7 @@ QHOST_SRC = qhost.c
 
 QHOST_ADD_SRC = \
                qstat_printing.c \
-               complex.c \
+               sge_complex.c \
                show_job.c \
                sge_conf.c \
                sig_handlers.c \
